fixed gallery swiper at HomaPage on mobile

--- a/src/components/GreetingSlider/GreetingSlider.module.scss
+++ b/src/components/GreetingSlider/GreetingSlider.module.scss
@@ -67,15 +67,12 @@
 
 .image {
   width: 100%;
-  padding-top: 100%;
-  margin-top: -100%;
   display: block;
   background-size: cover;
   background-position: top center;
+  height: 440px;
 
   @include onTablet {
-    padding-top: 0;
-    margin-top: 0;
     height: 100%;
   }
 
